Spring: redis-benchmark two claim ways